UI: Fix horizontal overflow of video feed on mobile and align wrapper constraints

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -366,6 +366,9 @@ a { text-decoration: none; color: inherit; }
   max-width: 100%;
 }
 .video-feed {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
